// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`electronDist 1`] = `"corrupted Electron dist"`;

exports[`one-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0.dmg",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-package 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleDocumentTypes": Array [
    Object {
      "CFBundleTypeExtensions": Array [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
      "LSHandlerRank": "Default",
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "boo",
      ],
      "CFBundleTypeIconFile": "icon.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Owner",
      "LSTypeIsPackage": true,
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "bar",
      ],
      "CFBundleTypeIconFile": "someFoo.icns",
      "CFBundleTypeName": "Bar",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Default",
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "foo",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.12.0",
  "LSUIElement": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-arm64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-universal.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-x64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac-x64.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`two-package 2`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 3`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 4`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 5`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 6`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 7`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`yarn two package.json w/ native module 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "universal",
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "safeArtifactName": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`yarn two package.json w/ native module 2`] = `
Object {
  "CFBundleDisplayName": "test-app-two-native-modules",
  "CFBundleExecutable": "test-app-two-native-modules",
  "CFBundleIconFile": "electron.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp2",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "test-app-two-native-modules",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.1",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`yarn two package.json w/ native module 3`] = `
Object {
  "files": Object {
    "index.html": Object {
      "size": "<size>",
    },
    "index.js": Object {
      "size": "<size>",
    },
    "node_modules": Object {
      "files": Object {
        ".pnpm": Object {
          "files": Object {
            "bindings@1.5.0": Object {
              "files": Object {
                "node_modules": Object {
                  "files": Object {
                    "file-uri-to-path": Object {
                      "files": Object {
                        "History.md": Object {
                          "size": "<size>",
                        },
                        "LICENSE": Object {
                          "size": "<size>",
                        },
                        "index.js": Object {
                          "size": "<size>",
                        },
                        "package.json": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "debug@4.1.1": Object {
              "files": Object {
                "node_modules": Object {
                  "files": Object {
                    "ms": Object {
                      "files": Object {
                        "index.js": Object {
                          "size": "<size>",
                        },
                        "license.md": Object {
                          "size": "<size>",
                        },
                        "package.json": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "node-mac-permissions@2.2.1": Object {
              "files": Object {
                "node_modules": Object {
                  "files": Object {
                    "bindings": Object {
                      "files": Object {
                        "LICENSE.md": Object {
                          "size": "<size>",
                        },
                        "bindings.js": Object {
                          "size": "<size>",
                        },
                        "package.json": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "node-addon-api": Object {
                      "files": Object {
                        "LICENSE.md": Object {
                          "size": "<size>",
                        },
                        "common.gypi": Object {
                          "size": "<size>",
                        },
                        "except.gypi": Object {
                          "size": "<size>",
                        },
                        "index.js": Object {
                          "size": "<size>",
                        },
                        "napi-inl.deprecated.h": Object {
                          "size": "<size>",
                        },
                        "napi-inl.h": Object {
                          "size": "<size>",
                        },
                        "napi.h": Object {
                          "size": "<size>",
                        },
                        "node_api.gyp": Object {
                          "size": "<size>",
                        },
                        "noexcept.gypi": Object {
                          "size": "<size>",
                        },
                        "nothing.c": Object {
                          "size": "<size>",
                        },
                        "package-support.json": Object {
                          "size": "<size>",
                        },
                        "package.json": Object {
                          "size": "<size>",
                        },
                        "tools": Object {
                          "files": Object {
                            "README.md": Object {
                              "size": "<size>",
                            },
                            "check-napi.js": Object {
                              "size": "<size>",
                            },
                            "clang-format.js": Object {
                              "size": "<size>",
                            },
                            "conversion.js": Object {
                              "executable": true,
                              "size": "<size>",
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
        "debug": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "dist": Object {
              "files": Object {
                "debug.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "browser.js": Object {
                  "size": "<size>",
                },
                "common.js": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "node.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "node-mac-permissions": Object {
          "files": Object {
            ".prettierrc": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "build": Object {
              "files": Object {
                "Release": Object {
                  "files": Object {
                    "permissions.node": Object {
                      "executable": true,
                      "size": "<size>",
                    },
                  },
                },
              },
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "permissions.mm": Object {
              "size": "<size>",
            },
          },
        },
      },
    },
    "package.json": Object {
      "size": "<size>",
    },
  },
}
`;

exports[`yarn two package.json w/ native module 4`] = `
Array [
  "app.asar",
  "electron.icns",
]
`;
